--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@ p{
     border-radius: 80px;
     margin : 10px;
 }
+canvas{
+    border-radius: 30px;
+    border-color: rgb(21, 110, 61);
+    border-style: groove;
+    border-width: 10px;
+    margin-top: 22px;
+}
